--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -793,7 +793,7 @@
                                     </div>
                                 </div>
                                 <div class="mt-3">
-                                    <a href="https://www.google.com/search?q=${encodeURIComponent(game.name + ' nintendo eshop')}" target="_blank" class="button is-small is-light is-fullwidth" style="border-color: #e60012; color: #e60012;">
+                                    <a href="${window.currentLocale === 'pt_BR' ? 'https://www.nintendo.com/pt-br/search/#q=' + encodeURIComponent(game.name) : 'https://www.nintendo.com/us/search/#q=' + encodeURIComponent(game.name)}" target="_blank" class="button is-small is-light is-fullwidth" style="border-color: #e60012; color: #e60012;">
                                         <span class="icon"><i class="bi bi-shop"></i></span>
                                         <span>eShop</span>
                                     </a>
